--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_other">OtherActivity</string>
+    <string name="title_activity_home">HomeActivity</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
