Added some new functionality to finish use cases

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="title_activity_other">OtherActivity</string>
     <string name="title_activity_home">HomeActivity</string>
     <string name="title_activity_maps">Map</string>
+    <string name="title_activity_location_list">LocationListActivity</string>
 </resources>
